--- a/art.html
+++ b/art.html
@@ -47,11 +47,11 @@
             <div class="left-menu-button-wrap">
                 <ul>
                     <li class="left-menu-button-top">ART</li>
-                    <li class="left-menu-button"><a href="#">PHOTO</a></li>
-                    <li class="left-menu-button"><a href="#">DRAWING</a></li>
-                    <li class="left-menu-button"><a href="#">VIDEO</a></li>
-                    <li class="left-menu-button"><a href="#">MUSIC</a></li>
-                    <li class="left-menu-button"><a href="#">ETC</a></li>
+                    <li class="left-menu-button"><a href="#photo">PHOTO</a></li>
+                    <li class="left-menu-button"><a href="#drawing">DRAWING</a></li>
+                    <li class="left-menu-button"><a href="#video">VIDEO</a></li>
+                    <li class="left-menu-button"><a href="#music">MUSIC</a></li>
+                    <li class="left-menu-button"><a href="#etc">ETC</a></li>
 
                 </ul>
             </div>
@@ -59,14 +59,59 @@
 
         <div class="article-wrap">
             <div class="article">
-                <h1>PHOTO</h1>
+                <a name="photo"></a> <h1>PHOTO</h1>
                 <hr>
-                <img src="src\images\art01.png" alt="작품1" >
+                <img src="src\images\photo\IMG_20210918_182052_344.webp" alt="작품1">
+                <img src="src\images\photo\IMG_20150824_121214.jpg" alt="작품2">
+                <img src="src\images\photo\IMG_20220211_204610_316.jpg" alt="작품3">
+                <img src="src\images\photo\IMG_20220206_194654_390.jpg" alt="작품4">
+                <img src="src\images\photo\IMG_20220206_123936_424.jpg" alt="작품5">
+                <img src="src\images\photo\IMG_20220206_003237_043.jpg" alt="작품6">
+                <img src="src\images\photo\IMG_20210822_025447_906.webp" alt="작품7">
+                <img src="src\images\photo\IMG_20210721_222058_834.webp" alt="작품8">
+                <img src="src\images\photo\IMG_20210702_121946_327.jpg" alt="작품9">
+                <img src="src\images\photo\IMG_20210503_003227_983.jpg" alt="작품10">
+                <img src="src\images\photo\IMG_20210417_160431_064.jpg" alt="작품11">
+                <img src="src\images\photo\IMG_20210411_194645_394.jpg" alt="작품12">
+                <img src="src\images\photo\IMG_20210405_005234_862.jpg" alt="작품13">
+                <img src="src\images\photo\IMG_20210328_014712_681.jpg" alt="작품14">
+                <img src="src\images\photo\IMG_20210326_224330_299.jpg" alt="작품15">
+                <img src="src\images\photo\IMG_20210325_182201_204.jpg" alt="작품16">
+                <img src="src\images\photo\IMG_20210325_130141_902.jpg" alt="작품17">
+                <img src="src\images\photo\IMG_20210317_121159_864.jpg" alt="작품18">
+                <img src="src\images\photo\IMG_20210211_232829_832.jpg" alt="작품19">
+                <img src="src\images\photo\IMG_20210211_232829_904.jpg" alt="작품20">
+                <img src="src\images\photo\IMG_20210210_154752_320.jpg" alt="작품21">
+                <img src="src\images\photo\IMG_20210116_175508_269.jpg" alt="작품22">
+                <img src="src\images\photo\IMG_20191022_074526_374.jpg" alt="작품23">
+                <img src="src\images\photo\IMG_20191009_123240_053.jpg" alt="작품24">
+                <img src="src\images\photo\IMG_20190930_143422_834.jpg" alt="작품25">
+                <img src="src\images\photo\IMG_20190813_001830_591.jpg" alt="작품26">
+                <img src="src\images\photo\IMG_20190720_230957_846.jpg" alt="작품27">
+                <img src="src\images\photo\IMG_20190713_000611_258.jpg" alt="작품28">
+                <img src="src\images\photo\IMG_20190709_185535_121.jpg" alt="작품29">
+                <img src="src\images\photo\IMG_20190628_130057_066.jpg" alt="작품30">
+                <img src="src\images\photo\IMG_20190620_005451_912.jpg" alt="작품31">
+                <img src="src\images\photo\IMG_20190612_233600_141.jpg" alt="작품32">
+                <img src="src\images\photo\IMG_20190612_123714_721.jpg" alt="작품33">
+                <img src="src\images\photo\IMG_20190531_175252_522.jpg" alt="작품34">
+                <img src="src\images\photo\IMG_20190515_032152_329.jpg" alt="작품35">
+                <img src="src\images\photo\IMG_20190507_173702_847.jpg" alt="작품36">
+                <img src="src\images\photo\IMG_20190323_145140_890.jpg" alt="작품37">
+                <img src="src\images\photo\IMG_20190121_181334_769.jpg" alt="작품38">
+                <img src="src\images\photo\IMG_20181229_013942_732.jpg" alt="작품39">
+                <img src="src\images\photo\IMG_20180616_142104_957.jpg" alt="작품40">
+                <img src="src\images\photo\IMG_20170811_163414_937.jpg" alt="작품41">
+                <img src="src\images\photo\IMG_20160504_001029.jpg" alt="작품42">
+                <img src="src\images\photo\IMG_20160408_171746.jpg" alt="작품43">
+                <img src="src\images\photo\IMG_20160325_002614.jpg" alt="작품44">
+                <img src="src\images\photo\IMG_20150909_120248.jpg" alt="작품45">
+                <img src="src\images\art01.png" alt="작품46" >
                 <p></p>
             </div>
 
             <div class="article">
-                <h1>DRAWING</h1>
+                <a name="drawing"></a><h1>DRAWING</h1>
                 <hr>
                 <p>▼ Hand Drawings <br>
                     <img src="src\images\drawing01.jpg" alt="손그림1">
@@ -76,7 +121,7 @@
                 </p>
             </div>
             <div class="article">
-                <h1>VIDEO</h1>
+                <a name="video"></a><h1>VIDEO</h1>
                 <hr>
                 <p>▼ 7SEC (2019) <br> <br>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/PZVnCYhegqU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
@@ -92,7 +137,7 @@
                 </p>
             </div>
             <div class="article">
-                <h1>MUSIC</h1>
+                <a name="music"></a><h1>MUSIC</h1>
                 <hr>
                 <p>▼ 공연 '오감도' (2019) <br>
                     <img src="src\images\perform02.jpg" alt="공연사진1">
@@ -101,7 +146,7 @@
                 </p>
             </div>
             <div class="article">
-                <h1>ETC</h1>
+                <a name="etc"></a><h1>ETC</h1>
                 <hr>
                 <p>                    
                     <img src="src\images\torch01.png" alt="">
