--- a/art.html
+++ b/art.html
@@ -107,6 +107,8 @@
                 <img src="src\images\photo\IMG_20160325_002614.jpg" alt="작품44">
                 <img src="src\images\photo\IMG_20150909_120248.jpg" alt="작품45">
                 <img src="src\images\art01.png" alt="작품46" >
+                <img src="src\images\photo\IMG_20220215.jpg" alt="작품47" >
+
                 <p></p>
             </div>
 
