--- a/sport.html
+++ b/sport.html
@@ -58,8 +58,12 @@
             <div class="article">
                 <h1>CLIMBING</h1>
                 <hr>
-                <img src="src\images\art01.png" alt="작품1" >
-                <p>&nbsp; &nbsp;&nbsp; &nbsp;- 주 활동 암장: 클라이밍파크 종로점<br></p>
+                <img src="src\images\clmb01.jpg" alt="clmb01" >
+                <img src="src\images\clmb02.jpg" alt="clmb02" >
+                <img src="src\images\clmb03.jpg" alt="clmb03" >
+                <p>
+                    <span>- 주 활동 암장: 클라이밍파크 종로점 / 알레클라이밍 혜화점</span>
+                </p>
             </div>
 
             <div class="article">
