--- a/philosophy.html
+++ b/philosophy.html
@@ -94,6 +94,8 @@
                 </p>
             </div>
         </div>
+        <div class=topBtn onclick="window.scrollTo(0,0);">TOP</div>
+
     </div>
 
 </body>
