--- a/about.html
+++ b/about.html
@@ -136,6 +136,8 @@
                 </p>
             </div>
         </div>
+        <div class=topBtn onclick="window.scrollTo(0,0);">TOP</div>
+
     </div>
 
 </body>
