--- a/cs.html
+++ b/cs.html
@@ -61,7 +61,7 @@
                 <h1>PYTHON</h1>
                 <hr>
                 <p>
-                    <a href="https://drive.google.com/drive/folders/1cqMnVcdSqFzcVfTBnm7rJgqupWR2SXf2?usp=sharing" target="_blank"> <span> PYTHON 교육자료 다운로드 </span> </a>
+                    <a href="https://drive.google.com/drive/folders/1cqMnVcdSqFzcVfTBnm7rJgqupWR2SXf2?usp=sharing" target="_blank"> <span>▼ PYTHON 교육자료 다운로드 </span> </a>
                 </p>
             </div>
 
@@ -75,7 +75,9 @@
             <div class="article">
                 <h1>WEB</h1>
                 <hr>
-                <p>HTML / CSS / JAVASCRIPT 교육자료 다운로드</p>
+                <p>
+                    <a href="https://drive.google.com/drive/folders/1O1mP_GLFEuuzuaFGZ_y6Iq3n1AXeb4Wz?usp=sharing"> <span>▼ HTML / CSS / JAVASCRIPT 교육자료 다운로드</span></a>
+                </p>
             </div>
             <div class="article">
                 <h1>Unity / C#</C></h1>
