--- a/cs.html
+++ b/cs.html
@@ -27,7 +27,7 @@
         <div class="button-wrap">
             <div class="button"><a href="./about.html">ABOUT</a></div>
             <div class="button"><a href="./philosophy.html">PHILOSOPHY</a></div>
-            <div class="button"><a href="./cs.html">COMPUTER SCIENCE</a></div>
+            <div class="button"><a href="./cs.html">DEV</a></div>
             <div class="button"><a href="./art.html">ART</a></div>
             <div class="button"><a href="./sport.html">SPORT</a></div>
             <div class="button"><a href="./contact.html">CONTACT</a></div>
@@ -46,7 +46,7 @@
         <div class="left-menu">
             <div class="left-menu-button-wrap">
                 <ul>
-                    <li class="left-menu-button-top">COMPUTER<br>SCIENCE</li>
+                    <li class="left-menu-button-top">DEV</li>
                     <li class="left-menu-button"><a href="#">PYTHON</a></li>
                     <li class="left-menu-button"><a href="#">NLP</a></li>
                     <li class="left-menu-button"><a href="#">WEB</a></li>
