--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- 데스크탑 & 태블릿 -->
             <div class="button"><a href="./about.html">ABOUT</a></div>
             <div class="button"><a href="./philosophy.html">PHILOSOPHY</a></div>
-            <div class="button"><a href="./cs.html">COMPUTER SCIENCE</a></div>
+            <div class="button"><a href="./cs.html">DEV</a></div>
             <div class="button"><a href="./art.html">ART</a></div>
             <div class="button"><a href="./sport.html">SPORT</a></div>
             <div class="button"><a href="./contact.html">CONTACT</a></div>
