--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <img id="pixel-welcome" src="src\images\pixel_art.png" alt="어서와요">
     </div>
 
-
-
+    <script src="src/contents.JSON" type="text/javascript"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
