--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Eunjae Tony Lee 이은재"> <!-- 카카오톡 미리보기 제목 -->
     <meta property="og:description" content="Philosopher & Software Developer"> <!-- 카카오톡 미리보기 설명 -->
     <meta property="og:url" content="https://ej-rarus.github.io/"> <!-- 카카오톡 미리보기 URL -->
-    <title>AWESOME WEB - ABOUT</title>
+    <title>이은재 닷컴 - ABOUT</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +61,7 @@
                 <hr>
                 <img id="profile" src="src\images\profile.jpg" alt="프로필 사진">
                 <p> <span>안녕하세요, 이은재 입니다.</span>
-                    <span>서울에 살고있는 한 우물 못파는 사람입니다.</span>
+                    <span>서울에 살며 웹개발과 철학, 스마트팜을 공부하고 있습니다.</span>
                 </p>
             </div>
             <div class="article">
@@ -69,7 +69,8 @@
                 <hr>
                 <p>
                     <span> - 세상에 도움이 되기</span>
-                    <span> - 선택과 집중을 하지 않기로 선택하고 집중하기</span>                    
+                    <span> - 선택과 집중을 하지 않기로 선택하고 집중하기</span>
+                    <span> - 스마트팜 창업</span>                    
                 </p>
             </div>
             <div class="article">
@@ -85,7 +86,7 @@
                     <span>&nbsp; &nbsp;&nbsp; &nbsp;- Processing</span>
                     <span>&nbsp; &nbsp;&nbsp; &nbsp;- Arduino</span>
                     <span>&nbsp; &nbsp;&nbsp; &nbsp;- 머신러닝</span><br>
-                    <span> - 악기 연주</span>
+                    <span> - 음악</span>
                     <span>&nbsp; &nbsp;&nbsp; &nbsp;- 우쿨렐레</span>
                     <span>&nbsp; &nbsp;&nbsp; &nbsp;- 카혼</span>
                     <span>&nbsp; &nbsp;&nbsp; &nbsp;- 블루스 하모니카</span>
@@ -100,6 +101,7 @@
                     <span>- 3D 모델링 </span>
                     <span>- 3D 프린팅 </span>
                     <span>- 클라이밍 </span>
+                    <span>- 수영</span>
                     <span>- 베이킹 </span>
                     <span>- 미트 프로세싱 </span>
                     
@@ -109,8 +111,16 @@
                 <h1>하는 일</h1>
                 <hr>
                 <p>
-                   <span> - 중앙대학교 대학원 철학과 서양철학 석사과정 재학</span>
-                   <span> - 중앙대학교 인문콘텐츠연구소 연구원 재직</span>
+                   <span> - 2024~ 스마트팜 전문가과정 </span>
+                   <a href="https://scipy.kr/" target="_blank" style="color: inherit;"><span> - 2023~ SciPy Korea 준비위원회 스태프 </span></a>
+                </p>
+            </div>
+            <div class="article">
+                <h1>했던 일</h1>
+                <hr>
+                <p>
+                   <span> - 중앙대학교 대학원 철학과 서양철학 석사과정 수료</span>
+                   <span> - 2019~2024 중앙대학교 인문콘텐츠연구소 연구원 재직</span>
 
                 </p>
             </div>
