--- a/cs.html
+++ b/cs.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Eunjae Tony Lee 이은재"> <!-- 카카오톡 미리보기 제목 -->
     <meta property="og:description" content="Philosopher & Software Developer"> <!-- 카카오톡 미리보기 설명 -->
     <meta property="og:url" content="https://ej-rarus.github.io/"> <!-- 카카오톡 미리보기 URL -->
-    <title>AWESOME WEB</title>
+    <title>이은재 닷컴 - DEV</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,7 +68,7 @@
             <div class="article">
                 <h1>NLP</h1>
                 <hr>
-                <p>▼ Python Web Crawler <br> <br>
+                <p style="font-weight: bold;">▼ Python Web Crawler <br> <br>
                     <a href="https://github.com/ej-rarus/python-web-crawler" target="_blank"><span>Github Project: python-web-crawler</span></a>
                 </p>
             </div>
@@ -78,6 +78,9 @@
                 <p>
                     <a href="https://drive.google.com/drive/folders/1O1mP_GLFEuuzuaFGZ_y6Iq3n1AXeb4Wz?usp=sharing"> <span>▼ HTML / CSS / JAVASCRIPT 교육자료 다운로드</span></a>
                 </p>
+
+                <p>▼ WEB APP (React) - 'Christmas MBTI' (2022) <br> <br><iframe width="560" height="315" src="https://www.youtube.com/embed/hMyr1IwnNsU?si=iMJWvVDAf5T6WPRQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+
             </div>
             <div class="article">
                 <h1>Unity / C#</C></h1>
