--- a/philosophy.html
+++ b/philosophy.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Eunjae Tony Lee 이은재"> <!-- 카카오톡 미리보기 제목 -->
     <meta property="og:description" content="Philosopher & Software Developer"> <!-- 카카오톡 미리보기 설명 -->
     <meta property="og:url" content="https://ej-rarus.github.io/"> <!-- 카카오톡 미리보기 URL -->
-    <title>AWESOME WEB - PHILOSOPHY</title>
+    <title>이은재 닷컴 - PHILOSOPHY</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,10 +57,10 @@
 
         <div class="article-wrap">
             <div class="article">
-                <h1>철학이란 무엇인가?</h1>
+                <h1>철학</h1>
                 <hr>
                 <img src="src\images\athen.jpg" alt="작품1" >
-                <p>저도 잘 모른답니다.</p>
+                <p><span>"교육은 살아가는 과정이지, 미래를 위한 준비가 아니다." <br> - 존 듀이</span></p>
             </div>
 
             <div class="article">
@@ -86,6 +86,7 @@
                 <h1>참여 연구·사업·프로젝트</h1>
                 <hr>
                 <p>
+                    <a href="https://www-kci-go-kr.proxy.cau.ac.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART003047280" style="color: black;"><span> - 2024 이은재, 김형주 "존 듀이의 경험주의 교육철학과 전인적 인공지능 교육을 위한 제언" 윤리교육연구 2024, vol., no.71, pp. 415-449 (35 pages)</span></a>
                     <a href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002810155" style="color: black;"> <span> - 2022 심지원, 이은재, 김문정 "인간의 윤리로서 인공지능윤리 -인공지능윤리의 가치와 자리-" 철학∙사상∙문화 38 pp.46-64 (2022) : 46. </span>
 
                     </a>
