--- a/sport.html
+++ b/sport.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Eunjae Tony Lee 이은재"> <!-- 카카오톡 미리보기 제목 -->
     <meta property="og:description" content="Philosopher & Software Developer"> <!-- 카카오톡 미리보기 설명 -->
     <meta property="og:url" content="https://ej-rarus.github.io/"> <!-- 카카오톡 미리보기 URL -->
-    <title>AWESOME WEB</title>
+    <title>이은재 닷컴 - SPORTS</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,6 +47,7 @@
             <div class="left-menu-button-wrap">
                 <ul>
                     <li class="left-menu-button-top">SPORT</li>
+                    <li class="left-menu-button"><a href="#">SWIMMING</a></li>
                     <li class="left-menu-button"><a href="#">CLIMBING</a></li>
                     <li class="left-menu-button"><a href="#">RUNNING</a></li>
                     <li class="left-menu-button"><a href="#">ETC</a></li>
@@ -55,6 +56,15 @@
         </div>
 
         <div class="article-wrap">
+            <div class="article">
+                <h1>SWIMMING</h1>
+                <hr>
+                <img src="src\images\swim01.jpg" alt="swim01" >
+                <img src="src\images\swim02.jpg" alt="swim01" >
+                <p>
+                    <span>- 주 활동 수영장: 상도 삼성스포렉스 / 흑석주민체육센터 수영장</span>
+                </p>
+            </div>
             <div class="article">
                 <h1>CLIMBING</h1>
                 <hr>
@@ -70,16 +80,16 @@
                 <h1>RUNNING</h1>
                 <hr>
                 <p>
-                    - 서울 둘레길 157K 완주 (2021)<br> <br>
-                    - 마라톤 완주<br>
+                   <span> - 서울 둘레길 157K 완주 (2021)<br></span>
+                    <span>- 마라톤 완주<br> </span>
 
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 한강나이트워크 42K 완주 (2019)<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 브릿지워크 서울 20K 완주 (2019)<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 119런 완주 (2018)<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- JTBC 서울 마라톤 10K 완주 (2018)<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 한강나이트워크 15K 완주 (2017)<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- GO SEOUL JTBC NIKE CITYRACE 10K 완주 (2018)<br>
-                    &nbsp; &nbsp;&nbsp; &nbsp;- 그 외 다수<br><br>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 한강나이트워크 42K 완주 (2019)<br></span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 브릿지워크 서울 20K 완주 (2019)<br></span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 119런 완주 (2018)<br></span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- JTBC 서울 마라톤 10K 완주 (2018)<br></span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 한강나이트워크 15K 완주 (2017)<br></span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- GO SEOUL JTBC NIKE CITYRACE 10K 완주 (2018)<br></span>
+                    <span>&nbsp; &nbsp;&nbsp; &nbsp;- 그 외 다수<br><br></span>
                 </p>
             </div>
             <div class="article">
