--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Eunjae Tony Lee 이은재"> <!-- 카카오톡 미리보기 제목 -->
     <meta property="og:description" content="Philosopher & Software Developer"> <!-- 카카오톡 미리보기 설명 -->
     <meta property="og:url" content="https://ej-rarus.github.io/"> <!-- 카카오톡 미리보기 URL -->
-    <title>AWESOME WEB - CONTACT</title>
+    <title>이은재 닷컴 - CONTACT</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,8 +57,8 @@
                 <p id="contact">
                     <ul>
                         <li><span><i class="fa-solid fa-envelope"></i> lpl2001@naver.com</span></li>
-                        <li><span><i class="fa-brands fa-instagram-square"></i> @ej_rarus</span></li>
-                        <li><span><i class="fa-solid fa-house-chimney"></i> ej-rarus.github.io</span></li>
+                        <li><a href="https://www.instagram.com/ej_rarus/" target="_blank" style="color: black;"><span><i class="fa-brands fa-instagram-square"></i> @ej_rarus</span></a></li>
+                        <li><a href="https://github.com/ej-rarus" target="_blank" style="color: black;"><span><i class="fa-solid fa-house-chimney"></i> ej-rarus.github.io</span></a></li>
                     </ul>                   
                 </p>
             </div>
