--- a/cs.html
+++ b/cs.html
@@ -62,6 +62,7 @@
                 <hr>
                 <p>
                     <a href="https://drive.google.com/drive/folders/1cqMnVcdSqFzcVfTBnm7rJgqupWR2SXf2?usp=sharing" target="_blank"> <span>▼ PYTHON 교육자료 다운로드 </span> </a>
+                    <button class="dl-btn" type="button" onclick="window.open('https://drive.google.com/drive/folders/1cqMnVcdSqFzcVfTBnm7rJgqupWR2SXf2?usp=sharing')";>Python 교육자료<br>다운로드</button>
                 </p>
             </div>
 
@@ -77,6 +78,7 @@
                 <hr>
                 <p>
                     <a href="https://drive.google.com/drive/folders/1O1mP_GLFEuuzuaFGZ_y6Iq3n1AXeb4Wz?usp=sharing"> <span>▼ HTML / CSS / JAVASCRIPT 교육자료 다운로드</span></a>
+                    <button class="dl-btn" type="button" onclick="window.open('https://drive.google.com/drive/folders/1O1mP_GLFEuuzuaFGZ_y6Iq3n1AXeb4Wz?usp=sharing')";>WEB 교육자료<br>다운로드</button>
                 </p>
 
                 <p>▼ WEB APP (React) - 'Christmas MBTI' (2022) <br> <br><iframe width="560" height="315" src="https://www.youtube.com/embed/hMyr1IwnNsU?si=iMJWvVDAf5T6WPRQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
