--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
         </br>
         </br>
         <img id="pixel-welcome" src="src\images\pixel_art.png" alt="어서와요">
+        <br>
+        <br>
+        <br>
+
+        <div>
+            <button class="dl-btn" type="button" onclick="window.open('https://drive.google.com/drive/folders/1cqMnVcdSqFzcVfTBnm7rJgqupWR2SXf2?usp=sharing')";>Python 교육자료<br>다운로드</button>
+            <br><br>
+            <button class="dl-btn" type="button" onclick="window.open('https://drive.google.com/drive/folders/1O1mP_GLFEuuzuaFGZ_y6Iq3n1AXeb4Wz?usp=sharing')";>WEB 교육자료<br>다운로드</button>
+        </div>
+        
     </div>
 
     <script src="src/contents.JSON" type="text/javascript"></script>
