--- a/philosophy.html
+++ b/philosophy.html
@@ -86,7 +86,7 @@
                 <h1>참여 연구·사업·프로젝트</h1>
                 <hr>
                 <p>
-                    <a href="https://www-kci-go-kr.proxy.cau.ac.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART003047280" style="color: black;"><span> - 2024 이은재, 김형주 "존 듀이의 경험주의 교육철학과 전인적 인공지능 교육을 위한 제언" 윤리교육연구 2024, vol., no.71, pp. 415-449 (35 pages)</span></a>
+                    <a href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART003047280" style="color: black;"><span> - 2024 이은재, 김형주 "존 듀이의 경험주의 교육철학과 전인적 인공지능 교육을 위한 제언" 윤리교육연구 2024, vol., no.71, pp. 415-449 (35 pages)</span></a>
                     <a href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002810155" style="color: black;"> <span> - 2022 심지원, 이은재, 김문정 "인간의 윤리로서 인공지능윤리 -인공지능윤리의 가치와 자리-" 철학∙사상∙문화 38 pp.46-64 (2022) : 46. </span>
 
                     </a>
