--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         </div>
         
     </div>
+    <footer></footer>
 
     <script src="src/contents.JSON" type="text/javascript"></script>
     <script src="app.js"></script>
