--- a/cs.html
+++ b/cs.html
@@ -102,6 +102,8 @@
         <div class=topBtn onclick="window.scrollTo(0,0);">TOP</div>
 
     </div>
+    <footer></footer>
+
 
 </body>
 <script src="script.js"></script>
