--- a/philosophy.html
+++ b/philosophy.html
@@ -98,6 +98,7 @@
         <div class=topBtn onclick="window.scrollTo(0,0);">TOP</div>
 
     </div>
+    <footer></footer>
 
 </body>
 <script src="script.js"></script>
