다운로드 버튼 업데이트

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             <button class="dl-btn" type="button" onclick="window.open('https://drive.google.com/drive/folders/1cqMnVcdSqFzcVfTBnm7rJgqupWR2SXf2?usp=sharing')";>Python 교육자료<br>다운로드</button>
             <br><br>
             <button class="dl-btn" type="button" onclick="window.open('https://drive.google.com/drive/folders/1O1mP_GLFEuuzuaFGZ_y6Iq3n1AXeb4Wz?usp=sharing')";>WEB 교육자료<br>다운로드</button>
+            <br><br>
+            <button class="dl-btn" type="button" onclick="window.open('https://drive.google.com/drive/folders/1I0xin9XAkqPtKbqQMAfMKBrvKZmNOo0w?usp=drive_link')";>Machine Learning 교육자료<br>다운로드</button>
         </div>
         
     </div>
