--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
             <button class="dl-btn" type="button" onclick="window.open('https://drive.google.com/drive/folders/1O1mP_GLFEuuzuaFGZ_y6Iq3n1AXeb4Wz?usp=sharing')";>WEB 교육자료<br>다운로드</button>
             <br><br>
             <button class="dl-btn" type="button" onclick="window.open('https://drive.google.com/drive/folders/1I0xin9XAkqPtKbqQMAfMKBrvKZmNOo0w?usp=drive_link')";>Machine Learning 교육자료<br>다운로드</button>
+            <br><br>
+            <button class="dl-btn" type="button" onclick="window.open('https://drive.google.com/drive/folders/13C7369QbjUVNYqzYfH0PAVUNY5cwzSeI?usp=drive_link')";>데이터 분석 교육자료<br>다운로드</button>
+
         </div>
         
     </div>
