Fix static image paths

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
             <div class="article">
                 <h1>소개</h1>
                 <hr>
-                <img id="profile" src="src\images\profile.jpg" alt="프로필 사진">
+                <img id="profile" src="src/images/profile.jpg" alt="프로필 사진">
                 <p> <span>안녕하세요, 이은재 입니다.</span>
                     <span>서울에 살며 웹개발과 철학, 스마트팜을 공부하고 있습니다.</span>
                 </p>
