--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </br>
         </br>
         </br>
-        <img id="pixel-welcome" src="src\images\pixel_art.png" alt="어서와요">
+        <img id="pixel-welcome" src="src/images/pixel_art.png" alt="어서와요">
         <br>
         <br>
         <br>
