--- a/philosophy.html
+++ b/philosophy.html
@@ -59,7 +59,7 @@
             <div class="article">
                 <h1>철학</h1>
                 <hr>
-                <img src="src\images\athen.jpg" alt="작품1" >
+                <img src="src/images/athen.jpg" alt="작품1" >
                 <p><span>"교육은 살아가는 과정이지, 미래를 위한 준비가 아니다." <br> - 존 듀이</span></p>
             </div>
 
