--- a/sport.html
+++ b/sport.html
@@ -59,8 +59,8 @@
             <div class="article">
                 <h1>SWIMMING</h1>
                 <hr>
-                <img src="src\images\swim01.jpg" alt="swim01" >
-                <img src="src\images\swim02.jpg" alt="swim01" >
+                <img src="src/images/swim01.jpg" alt="swim01" >
+                <img src="src/images/swim02.jpg" alt="swim01" >
                 <p>
                     <span>- 주 활동 수영장: 상도 삼성스포렉스 / 흑석주민체육센터 수영장</span>
                 </p>
@@ -68,9 +68,9 @@
             <div class="article">
                 <h1>CLIMBING</h1>
                 <hr>
-                <img src="src\images\clmb01.jpg" alt="clmb01" >
-                <img src="src\images\clmb02.jpg" alt="clmb02" >
-                <img src="src\images\clmb03.jpg" alt="clmb03" >
+                <img src="src/images/clmb01.jpg" alt="clmb01" >
+                <img src="src/images/clmb02.jpg" alt="clmb02" >
+                <img src="src/images/clmb03.jpg" alt="clmb03" >
                 <p>
                     <span>- 주 활동 암장: 클라이밍파크 종로점 / 알레클라이밍 혜화점</span>
                 </p>
